Pocet navstev, nove js,css,favicon

--- a/stylekrizovatky.css
+++ b/stylekrizovatky.css
@@ -32,7 +32,7 @@ input{
 body {
     font-size: 16px;
     font-family: 'Open Sans';
-    
+    background-image: url("pozadie.jpg");
 }
 
 .napoveda {
