--- a/stylekrizovatky.css
+++ b/stylekrizovatky.css
@@ -32,7 +32,8 @@ input{
 body {
     font-size: 16px;
     font-family: 'Open Sans';
-    background-image: url("pozadie.jpg");
+
+    margin: 0px;
 }
 
 .napoveda {
@@ -49,9 +50,9 @@ body {
 }
 
 #visitcounter{
-    position: fixed;
-    bottom: 0em;
-    right: 2em;
+    position: relative;
+    bottom: -1em;
+    right: 1em;
 }
 
 canvas {
@@ -74,3 +75,20 @@ nav{
     margin: 2px;
 
 }
+footer  {
+    text-align: center;
+    padding: 3px;
+    background: #4CA1AF;  
+    background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  
+    background: linear-gradient(to right, #C4E0E5, #4CA1AF); 
+    position: fixed;
+    bottom: 0em;
+    width: 100%;
+        
+    }
+    
+    footer ul li {
+        list-style-type: none;
+        display: inline;
+        padding-right: 25px;
+    }
