--- a/stylemeniny.css
+++ b/stylemeniny.css
@@ -33,6 +33,7 @@ body {
     font-size: 16px;
     font-family: 'Open Sans';
     background-image: url("pozadie.jpg");
+    margin: 0px;
 }
 
 .napoveda {
@@ -49,9 +50,9 @@ body {
 }
 
 #visitcounter{
-    position: fixed;
-    bottom: 0em;
-    right: 2em;
+    position: relative;
+    bottom: -1em;
+    right: 1em;
 }
 
 nav ul li{
@@ -70,3 +71,21 @@ nav{
     margin: 2px;
 
 }
+
+footer  {
+    text-align: center;
+    padding: 3px;
+    background: #4CA1AF;  
+    background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  
+    background: linear-gradient(to right, #C4E0E5, #4CA1AF); 
+    position: fixed;
+    bottom: 0em;
+    width: 100%;
+        
+    }
+    
+    footer ul li {
+        list-style-type: none;
+        display: inline;
+        padding-right: 25px;
+    }
