--- a/stylekrizovatky.css
+++ b/stylekrizovatky.css
@@ -55,7 +55,7 @@ body {
 }
 
 canvas {
-    border: 1px solid black;
+    border: 1px solid white;
   }
   
 nav ul li{
@@ -73,4 +73,8 @@ nav{
     font-size: xx-large;
     margin: 2px;
 
+}
+
+#Canvas1{
+    background-image: "/images/krizovatka1.png";
 }
