--- a/stylekrizovatky.css
+++ b/stylekrizovatky.css
@@ -10,6 +10,59 @@ h1{
     margin-bottom: 5px;
     padding: 20px;
 }
+/* Style the header with a grey background and some padding */
+.header {
+    overflow: hidden;
+    background-color: khaki;
+    padding: 20px 10px;
+  }
+  
+  /* Style the header links */
+  .header a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+  }
+  
+  /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+  .header a.logo {
+    font-size: 25px;
+    font-weight: bold;
+  }
+  
+  /* Change the background color on mouse-over */
+  .header a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the active/current link*/
+  .header a.active {
+    background-color: dodgerblue;
+    color: white;
+  }
+  
+  /* Float the link section to the right */
+  .header-right {
+    float: right;
+  }
+  
+  /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+  @media screen and (max-width: 500px) {
+    .header a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .header-right {
+      float: none;
+    }
+  }
 
 div{
     color: white;
@@ -32,8 +85,10 @@ input{
 body {
     font-size: 16px;
     font-family: 'Open Sans';
-
     margin: 0px;
+    background-image: url("background.jpg");
+    background-size: cover;
+
 }
 
 .napoveda {
@@ -96,3 +151,14 @@ footer  {
         display: inline;
         padding-right: 25px;
     }
+
+#navigacia_krizovatky{
+    border-style: solid;
+    border-radius: 1em;
+    width: 10%;
+    border-width: 2px;
+    border-color: black;
+    position: relative;
+    top: -15em;
+    left: 73em;
+}
