--- a/print.css
+++ b/print.css
@@ -84,7 +84,6 @@ body {
     font-size: 16px;
     font-family: 'Open Sans';
     margin: 0px;
-    background-image: url("background.jpg");
     background-size: cover;
     margin:0;
 
@@ -123,7 +122,7 @@ footer  {
     position: fixed;
     bottom: 0em;
     width: 100%;
-        
+    display: none;    
     }
     
     footer ul li {
@@ -136,10 +135,13 @@ footer  {
         border: 1px solid #dddddd;
         text-align: left;
         padding: 8px;
+    
       }
 #Rozdelenie_uloh{
     margin: 1em;
 }
-
+table{
+    page-break-inside: avoid;
+}
 
 
