--- a/stylekrizovatky.css
+++ b/stylekrizovatky.css
@@ -153,17 +153,56 @@ footer  {
     }
 
     #vylustenieKrizovatky{
-        height: 2em;
-        width: 2em;
-        color:red ;
+      height: 2em;
+      color: red;
+      position: relative;
+      left: 9em;
+      border-style: solid;
+      width: 17%;
+      text-align: center;
+      height: 1%;
+      border-radius: 1em;
+      background-color: honeydew;
     }
 #navigacia_krizovatky{
     border-style: solid;
     border-radius: 1em;
+    background: #56CCF2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     width: 10%;
     border-width: 2px;
     border-color: black;
     position: relative;
     top: -15em;
     left: 73em;
+}
+
+.button{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  position: relative;
+  top: -7em;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
 }
