--- a/stylemeniny.css
+++ b/stylemeniny.css
@@ -70,7 +70,7 @@ div{
 }
 
 input{   
-    width: 95%;
+    width: 98%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -78,8 +78,18 @@ input{
 
 .stlpec{
     margin-top: 50px;
-    width: 50%;
+    width: 45%;
     float: left;
+}
+
+.vyber{
+  float: left;
+  width: 10%;
+  margin-top: 80px;
+}
+select{
+  padding: 13px;
+  width: 90%;
 }
 
 body {
